--- a/cliente/index.html
+++ b/cliente/index.html
@@ -22,6 +22,9 @@
     input[type="text"]{border:1px solid #e5e7eb;border-radius:10px;padding:8px 10px}
     .flash{animation:flash .6s ease-out} @keyframes flash{from{box-shadow:0 0 0 rgba(15,118,110,0)}to{box-shadow:0 0 0 10px rgba(15,118,110,.12)}}
     .toast{position:fixed;left:50%;transform:translateX(-50%);bottom:16px;background:#111;color:#fff;padding:10px 14px;border-radius:10px}
+   .btn[disabled], .method.disabled{opacity:.4;pointer-events:none}
+.method.active{outline:2px solid #0F766E}
+ 
   </style>
 </head>
 <body>
