--- a/cliente/index.html
+++ b/cliente/index.html
@@ -212,22 +212,33 @@ function syncFlowState(){
 
   // ===== Recibir ticket del TPV
   makeBus('pagoyo_demo', (d)=>{
-    try{
-      // Filtro por mesa robusto (solo dígitos por si viene "Mesa 6")
-      const mesaSel = (document.getElementById('mesaSelect')?.value || '6').toString().replace(/\D/g,'');
-      const msgMesa = (d.mesa || '6').toString().replace(/\D/g,'');
-      if (msgMesa && mesaSel && msgMesa !== mesaSel) return;
+  try{
+    const mesaSel = (document.getElementById('mesaSelect')?.value || '6').toString().replace(/\D/g,'');
+    const msgMesa = (d.mesa || '6').toString().replace(/\D/g,'');
+    if (msgMesa && mesaSel && msgMesa !== mesaSel) return;
 
-      if (d.type === 'tpv_ticket_update') applyTPVUpdate(d);
-      if (d.type === 'tpv_ticket_close'){
-        list.style.opacity = .6; list.style.pointerEvents = 'none';
-        pillEstado.textContent = 'ticket cerrado'; confirmBtn.disabled = true;
-        const t=document.createElement('div');t.className='toast';t.textContent='Ticket cerrado desde TPV';document.body.appendChild(t);
-        setTimeout(()=>{t.style.transition='opacity .25s, transform .25s';t.style.opacity=0;t.style.transform='translateY(-8px)';},1500);
-        setTimeout(()=>t.remove(),1800);
+    if (d.type === 'tpv_ticket_update') {
+      applyTPVUpdate(d);
+      // Si está la pantalla de inicio, mostramos el modo “lo mío” automáticamente
+      if (document.getElementById('main').style.display === 'none') {
+        pillEstado.textContent = 'ticket listo';
+        // Si prefieres que no entre solo, comenta la línea siguiente
+        showMine();
+      } else {
+        pillEstado.textContent = 'sincronizado';
       }
-    }catch(err){ console.error('Cliente onmessage', err); }
-  });
+    }
+
+    if (d.type === 'tpv_ticket_close'){
+      list.style.opacity = .6; list.style.pointerEvents = 'none';
+      pillEstado.textContent = 'ticket cerrado'; confirmBtn.disabled = true;
+      const t=document.createElement('div');t.className='toast';t.textContent='Ticket cerrado desde TPV';document.body.appendChild(t);
+      setTimeout(()=>{t.style.transition='opacity .25s, transform .25s';t.style.opacity=0;t.style.transform='translateY(-8px)';},1500);
+      setTimeout(()=>t.remove(),1800);
+    }
+  }catch(err){ console.error('Cliente onmessage', err); }
+});
+
 
   function applyTPVUpdate(payload){
     try{
