Refactor payment buttons to use button type

--- a/cliente/index.html
+++ b/cliente/index.html
@@ -48,8 +48,13 @@
     <div style="font-size:18px;font-weight:800;color:#0F766E">¿Cómo quieres pagar?</div>
     <div style="color:#555">Elige la forma de repartir tu parte del ticket.</div>
     <div style="display:flex;gap:10px;justify-content:center;flex-wrap:wrap">
-      <button id="btnModeSplit" class="btn" style="background:#111">Pagar a medias con todos</button>
-      <button id="btnModeMine" class="btn">Pagar solo lo mío</button>
+    <button id="btnModeSplit" class="btn" type="button" style="background:#111">
+  Pagar a medias con todos
+</button>
+<button id="btnModeMine" class="btn" type="button">
+  Pagar solo lo mío
+</button>
+ 
     </div>
   </div>
 </section>
